[package]
name = "jwt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = "0.16.0"
sha2 = "0.10.6"
hmac = "0.12.1"
serde_json = "1.0.91"
serde = "1.0.152"
lambda_runtime= "0.7.2"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
tokio = { version = "1", features = ["macros"] }